force-app/main/default/objects/Expedition_Booking__c/Expedition_Booking__c.object-meta.xml
<CustomObject>
    <label>Expedition Booking</label>
    <pluralLabel>Expedition Bookings</pluralLabel>
    <description>Represents a lunar expedition booking made by a Lunar Explorer with Lunar Basecamp Outfitters. Tracks the expedition itinerary, landing site, status, and total cost.</description>
    <nameField>
        <label>Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>EXP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>