force-app/main/default/objects/Expedition_Booking__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <description>Safety compliance status for this expedition booking. Set by Pre_Expedition_Safety_Check flow when Status changes to Confirmed. Cleared = all certs valid; Blocked = missing/expired certs; Pending = not yet evaluated.</description>
    <inlineHelpText>Automatically set when booking is confirmed. Cleared = ready for gear assignment; Blocked = safety checks failed.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>