force-app/main/default/objects/Expedition_Booking__c/fields/Expedition_Name__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Name__c</fullName>
    <label>Expedition Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Descriptive name for the expedition package or tour (e.g., &quot;Tycho Rim Traverse - 5 Day Classic&quot;).</description>
    <inlineHelpText>Enter a descriptive name for this expedition that identifies the route or experience type.</inlineHelpText>
</CustomField>