force-app/main/default/objects/Expedition_Booking__c/fields/Landing_Site__c.field-meta.xml
<CustomField>
    <fullName>Landing_Site__c</fullName>
    <label>Landing Site</label>
    <type>Picklist</type>
    <description>The primary lunar landing and basecamp site for this expedition, determining the terrain type and required gear.</description>
    <inlineHelpText>Select the lunar landing site. Each site has different terrain challenges and minimum certification requirements.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tycho Crater</fullName>
            </value>
            <value>
                <fullName>Shackleton Rim</fullName>
            </value>
            <value>
                <fullName>Hadley Rille</fullName>
            </value>
            <value>
                <fullName>Mare Tranquillitatis</fullName>
            </value>
            <value>
                <fullName>Aristarchus Plateau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>