force-app/main/default/objects/Expedition_Booking__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <label>Launch Date</label>
    <type>Date</type>
    <description>Scheduled lunar surface arrival / expedition start date.</description>
    <inlineHelpText>The date the explorer is scheduled to arrive on the lunar surface and begin the expedition.</inlineHelpText>
</CustomField>