force-app/main/default/objects/Expedition_Booking__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
    <description>Scheduled expedition end date and return to base camp / lunar orbit.</description>
    <inlineHelpText>The date the explorer is scheduled to complete the expedition and return to base camp.</inlineHelpText>
</CustomField>