force-app/main/default/objects/Expedition_Booking__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total all-inclusive cost for this expedition booking, including guide fees, gear rental, transport, and any surcharges.</description>
    <inlineHelpText>Total expedition cost including all gear rentals, guide fees, and transport charges.</inlineHelpText>
</CustomField>